--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,7 +100,10 @@ img{
   font-size: var(--h2-font-size);
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
-  
+  text-transform: uppercase;
+  letter-spacing: .35rem;
+  text-align: center;
+  margin-bottom: var(--mb-3);
 }
 
 /*========== LAYOUT ==========*/
