--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,7 +96,7 @@ img{
   padding: 1.5rem 0;
 }
 
-.section-tilte{
+.section-title{
   font-size: var(--h2-font-size);
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
@@ -263,10 +263,29 @@ img{
   color: var(--container-color);
 }
 /*========== SOCIAL ==========*/
+.social__container{
+  grid-template-columns: max-content;
+  gap: 1rem;
+}
 
+.social__link{
+  display: inline-flex;
+  align-items: center;
+  font-size: var(--small-font-size);
+  color: var(--text-color);
+}
+.social__link:hover{
+  color: var(--title-color);
+}
+.social__icon{
+  font-size: 1.2rem;
+  margin-right: .25rem;
+}
 
 /*========== PROFILE ==========*/
-
+.profile__description{
+  text-align: center;
+}
 
 /*========== EDUCATION AND EXPERIENCE ==========*/
 
