--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -288,15 +288,18 @@ img{
 }
 
 /*========== EDUCATION AND EXPERIENCE ==========*/
-.education__content{
+.education__content,
+.experience__content{
   display: flex;
 }
 
-.education__time{
+.education__time,
+.experience__time{
   padding-right: 1rem;
 }
 
-.education__rounder{
+.education__rounder,
+.experience__rounder{
   position: relative;
   display: block;
   width: 16px;
@@ -305,7 +308,8 @@ img{
   border-radius: 50%;
   margin-top: .25rem;
 }
-.education__line{
+.education__line,
+.experience__line{
   display: block;
   width: 2px;
   height: 110%;
@@ -313,15 +317,18 @@ img{
   transform: translate(7px,0);
 }
 
-.education__data{
+.education__data,
+.experience__data{
   gap: .5rem;
 }
 
-.education__title{
+.education__title,
+.experience__title{
   font-size: var(--h3-font-size);
 }
 
-.education__studies{
+.education__studies,
+.experience__company{
   font-size: var(--small-font-size);
   color: var(--title-color);  
 }
@@ -329,22 +336,28 @@ img{
 .education__year{
   font-size: var(--smaller-font-size);
 }
+
+
+
 /*========== SKILLS AND LANGUAGES ==========*/
-.skills__content{
-  grid-template-columns: repeat(2,1fr);
+.skills__content,
+.languages__content{
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.skills__content{
+.languages__content{
   gap: 0;
 }
 
-.skills_name{
+.skills__name,
+.languages__name{
   display: flex;
   align-items: center;
   margin-bottom: var(--mb-3);
 }
 
-.skills__circle{
+.skills__circle,
+.languages__circle{
   display: inline-block;
   width: 5px;
   height: 5px;
@@ -353,18 +366,75 @@ img{
   margin-right: .75rem;
 }
 
-/*========== CERTIFICATES ==========*/
 
+
+/*========== CERTIFICATES ==========*/
+.certificate__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-1) ;
+}
 
 /*========== REFERENCES ==========*/
+.references__content{
+  gap: .25rem;
+}
 
+.references__subtitle{
+  color: var(--text-color-light);
+}
+
+.references__subtitle,
+.references__contact{
+  font-size: var(--smaller-font-size);
+}
+
+.references__title{
+  font-size: var(--h3-font-size);
+}
 
 /*========== INTERESTS ==========*/
+.interests__container{
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: var(--mb-2);
+}
 
+.interests__content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.interests__icon{
+  font-size: 1.5rem;
+  color: var(--text-color-light);
+  margin-bottom: .25rem;
+}
 /* Scroll top */
+.scrolltop{
+  position: fixed;
+  right: 1rem;
+  bottom: -20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: .3rem;
+  background-color: var(--container-color-alt);
+  border-radius: .4rem;
+  z-index: var(--z-tooltip);
+  transition: .4s;
+  /*visibility: hidden;*/
+}
 
+.scrolltop__icon{
+  font-size: 1.2rem;
+  color: var(--text-color);
+}
 
+.show-scroll{
+  visibility: visible;
+  bottom: 5rem;
+
+}
 /*========== MEDIA QUERIES ==========*/
 /* For small devices, menu two columns */
 
