--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,9 +48,30 @@ html{
 
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme{
+  --title-color: #F2F2F2;
+  --text-color: #BFBFBF;
+  --container-color: #212121;
+  --container-color-alt: #181616;
+  --body-color: #2B2B2B;
+}
 
 /*========== Button Dark/Light ==========*/
+.change-theme{
+  position: absolute;
+  right: 0;
+  top: 2.2rem;
+  display: flex;
+  color: var(--text-color);
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.change-theme:hover{
+  color: var(--title-color);
+}
+
+
 
 
 /*========== Font size variables to scale cv ==========*/
@@ -445,7 +466,7 @@ img{
 }
 
 /* Classes modified for large screen size */
-@media scree and (min-width: 968px){
+@media screen and (min-width: 968px){
   body{
     margin: 3rem 0;
   }
@@ -460,7 +481,7 @@ img{
   
   .resume{
     display: grid;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: .5fr 1fr;
     background-color: var(--container-color);
     box-shadow: 0 0 8px rgba(13,12,12,.15);
   }
@@ -473,5 +494,33 @@ img{
   .resume__right{
     padding: 0 1.5rem;
   }
+
+  .section-title,
+  .profile__description{
+    text-align: initial;
+  }
+
+  .home__container{
+    gap: 1.5rem;
+  }
+
+  .home__button-movil{
+    display: none;
+  }
+
+  .references__container{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+.languages__content{
+  grid-template-columns: repeat(3, max-content);
+  column-gap: 3.5rem;
+}
+
+.interests__container{
+  grid-template-columns: repeat(4, max-content);
+  column-gap: 3.5rem;
+}
+
 }
 
