--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -527,7 +527,7 @@ img{
 
 /*========== INTERESTS ==========*/
 .interests__container{
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   margin-top: var(--mb-2);
 }
 
@@ -538,7 +538,7 @@ img{
 }
 
 .interests__icon{
-  font-size: 1.5rem;
+  font-size: .85rem;
   color: var(--text-color-light);
   margin-bottom: .25rem;
 }
